Add builder AssertJ-Swing test suite, fix two real cascade bugs, improve dialog UX, bump to 0.9.16
- Add full AssertJ-Swing screen-test coverage for builder: every menu item,
  every CRUD screen's New/Edit/Delete/Refresh cycle, and the Contest ->
  Candidates -> Regions dialog cascade.
- Fix ClassCastException on Manage Candidates/Assign Regions/Translations
  for an already-saved Contest reopened by double-click (Window, not Frame,
  since the owner can be a Dialog).
- Fix silent candidate duplication on the ordinary create-contest ->
  add-candidates -> assign-regions workflow: contestRepo.save()'s merge()
  return value was discarded, so still-transient candidates got re-inserted
  by the next save in the cascade.
- Add DesktopElectionBuilder + run_all.sh --desktop: builds the test
  election by driving builder's real UI with a real Robot, as a third
  alternative to build_election.py (bBuilder REST) and TestElectionBuilder
  (headless), idempotent against the real ~/pbss_data database.
- Word-wrap prose text areas (preamble/postamble/instructions/explanatory
  text) instead of requiring horizontal scrolling; word-wrapping is
  disabled for the header HTML field since it's an HTML/CSS field where
  wrapping would obscure structure.
- Replace free-text candidate display-order entry with a spinner.
- Add a "Preview in Browser" button for the ballot design template's header
  HTML/CSS field, rendering it with real placeholder substitution in the
  system browser (full CSS support, unlike an embedded Swing component).
- Bump all module versions to 0.9.16.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>